--- a/justificacion.html
+++ b/justificacion.html
@@ -112,7 +112,7 @@ nav a:hover {
 <div style="gap:25px; margin:25px; margin-bottom: 5px;">
 <div class="media-container">
   <div class="media-box">
-    <iframe width="560" height="315" src="https://www.thinglink.com/view/scene/2051881492769932132" allowfullscreen></iframe>
+    <iframe src="https://www.thinglink.com/view/scene/2051881492769932132" allowfullscreen></iframe>
   </div>
 </div>
 
@@ -124,7 +124,7 @@ nav a:hover {
 
 <div class="media-container">
   <div class="media-box">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oY9BSD2PHeM?si=89ixnrXjGArfpD1m&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/oY9BSD2PHeM?si=89ixnrXjGArfpD1m&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 
@@ -135,7 +135,7 @@ nav a:hover {
 
 <div class="media-container">
   <div class="media-box">
-    <iframe width="560" height="315" src="https://forms.office.com/pages/responsepage.aspx?id=EZDKymp73kSGHwlaLKiDt67CyH1VR41HkFOSNnDxtnpUMk1OMlk0TDBXNDBLRlg1UEJVT1A4Slg2TS4u&route=shorturl" allowfullscreen></iframe>
+    <iframe src="https://forms.office.com/pages/responsepage.aspx?id=EZDKymp73kSGHwlaLKiDt67CyH1VR41HkFOSNnDxtnpUMk1OMlk0TDBXNDBLRlg1UEJVT1A4Slg2TS4u&route=shorturl" allowfullscreen></iframe>
   </div>
 </div>
 
