--- a/usuario.html
+++ b/usuario.html
@@ -179,7 +179,7 @@ La poesía de Vergara es una invitación a mantener los ojos abiertos, a gritar 
                 <p style="font-size:10px; color:gray;">02 • 10 • 27 — Resistencia</p>
        <p style="text-align:justify; font-family:times-new-roman;font-size: 12px;">
   Siwapajti (Medicina de mujer) Memoria y teoría de mujeres de Patricia Karina Vergara Sánchez, el cual pretende ser un llamado de atención, un despertar para la mujer de nuestra era. Este reúne diversos tópicos que de manera sutil plantan los cimientos del movimiento lesbofeminista.</p>
-        <a href="aiwapajti.html" style="font-size:12px; color:gray;">Seguir leyendo</a>
+        <a href="siwapajti.html" style="font-size:12px; color:gray;">Seguir leyendo</a>
     </div>
 
 
