--- a/siwapajti.html
+++ b/siwapajti.html
@@ -175,7 +175,7 @@ nav a:hover {
 
 
     <div style="margin-bottom:20px; border:1px solid #ccc; border-radius:8px; padding:10px;">
-      <a href="cyberbuylling.html" style="font-size:14px; margin-top:8px; text-decoration: none; color: rebeccapurple;">El acoso cibernético hacia las activistas lesbofeministas</a>
+      <a href="cyberbullying.html" style="font-size:14px; margin-top:8px; text-decoration: none; color: rebeccapurple;">El acoso cibernético hacia las activistas lesbofeministas</a>
           <p style="font-size:10px; color:gray;">02 • 10 • 27 — Resistencia</p>
        <p style="text-align:justify; font-family:times-new-roman;font-size: 12px;">
 La mudanza a las plataformas digitales, por parte de distintos colectivos, activistas o subculturas para perpetuar y ampliar el alcance de sus posturas e ideologías; este nuevo tipo de agresión que hace uso incorrecto de las plataformas sociales en la red es denominado ciberacoso intercultural.</p>
